Alternative fix for IPv6 alignment

--- a/interfaces/default/css/dash.css
+++ b/interfaces/default/css/dash.css
@@ -123,3 +123,7 @@
 #dash_disks .table{
   table-layout: auto !important;
 }
+
+.ip{
+width:360px;
+}
